# decant

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/decant/: __init__.py  auth.py  cli.py  compactor.py  models.py  session.py  strip.py  ui.py
tests/: test_auth.py
